# atlas

./: CONTRIBUTING.md  Cargo.toml  DEPLOY.md  Dockerfile  LICENSE  README.md  deny.toml  docker-compose.yml
.github/workflows/: ci.yml
crates/atlas-bus/: Cargo.toml
crates/atlas-bus/src/: lib.rs
crates/atlas-config/: Cargo.toml
crates/atlas-config/src/: lib.rs
crates/atlas-core/: Cargo.toml
crates/atlas-core/src/: assets.rs  click.rs  facet_config.rs  health.rs  main.rs  searches.rs  suggest.rs  weights.rs
crates/atlas-db/: Cargo.toml
crates/atlas-db/src/: facet_config.rs  lib.rs  popularity.rs  repo.rs  saved.rs  search_pg.rs  suggest.rs  vector.rs  weights.rs
crates/atlas-embed/: Cargo.toml
crates/atlas-embed/src/: lib.rs  preprocess.rs
crates/atlas-ingest/: Cargo.toml
crates/atlas-ingest/src/: hash.rs  lib.rs  prepare.rs  provenance.rs  state.rs
crates/atlas-realtime/: Cargo.toml
crates/atlas-realtime/src/: auth.rs  lib.rs  protocol.rs  registry.rs
crates/atlas-render/: Cargo.toml
crates/atlas-render/src/: lib.rs
crates/atlas-search/: Cargo.toml
crates/atlas-search/src/: apiauth.rs  cache.rs  cursor.rs  eval.rs  lib.rs  rrf.rs  understanding.rs
crates/atlas-store/: Cargo.toml
crates/atlas-store/src/: lib.rs
crates/atlas-types/: Cargo.toml
crates/atlas-types/src/: lib.rs
crates/atlas-web/: Cargo.toml  README.md  Trunk.toml  index.html
crates/atlas-web/src/: api.rs  main.rs
migrations/: 0001_init.sql  0002_saved_search.sql  0003_search_log.sql  0004_facet_config.sql  0005_search_weights.sql  0006_provenance.sql
openapi/: atlas.v1.yaml
scripts/: airgap-test.sh
