[package]
name = "atlas-config"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false  # crate interne du workspace, jamais publiée sur crates.io (cf. deny.toml allow-wildcard-paths)
description = "Chargement de configuration souverain (env), sans dépendance externe."

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
