[package]
name = "atlas-ingest"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Pipeline d'ingestion (doc 26). M1 : fonctions pures (hash contenu, pHash, machine d'états)."

[dependencies]
atlas-embed = { path = "../atlas-embed" }
atlas-types = { path = "../atlas-types" }
sha2 = { workspace = true }
