[package]
name = "atlas-realtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Realtime Gateway WebSocket (doc 40) : abonnements scopés, pont broadcast → clients."

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
