[package]
name = "atlas-store"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false  # crate interne du workspace, jamais publiée sur crates.io (cf. deny.toml allow-wildcard-paths)
description = "Stockage objet (doc 02/23). M1 : FS local (testable) ; SeaweedFS S3 derrière le même trait."

[dependencies]
thiserror = { workspace = true }
