[package]
name = "atlas-web"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false
description = "Atlas DAM — front WASM (Leptos CSR). M1 démarrage : recherche d'assets."

# Crate EXCLU du workspace back (cf. Cargo.toml racine). Bâti par `trunk build`,
# cible wasm32-unknown-unknown. Appels API via `fetch` (web-sys) — aucune dépendance
# réseau lourde (souverain/frugal), même origine via le proxy trunk en dev.

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "Window",
  "Request",
  "RequestInit",
  "RequestMode",
  "Headers",
  "Response",
] }

[profile.release]
opt-level = "z"
lto = true
